--- a/V2/public/templates/login.html
+++ b/V2/public/templates/login.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='assets/vendor/jquery/jquery.min.js' )}}"></script>
+    <script src="{{ url_for('static', filename='assets/jquery/jquery.min.js' )}}"></script>
     <script src="{{ url_for('static', filename='assets/vendor/bootstrap/js/bootstrap.min.js')}}"></script>
 
     <script>
