--- a/V2/public/templates/home.html
+++ b/V2/public/templates/home.html
@@ -172,8 +172,10 @@
 <br>
     <section id="activeConnections" class="section">
         <h2>Active Connections</h2>
+        <span class='uiterminal-line is-empty'>
         <ul id="connectionList">
         </ul>
+        </span>
        
  </span>
         
